adl-frontend/src/test/resources/unit/error/semantic/adlRefs/ref1.adl
//#SemanticError GroupId=ADL ErrorId=ADL_NOT_FOUND line=4

primitive adlRefs.ref1 extends 
foo.unknownADL
{

}
